# SQLiq

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml  sqliq.db
app/: cli.py  graphs.py  state.py  workflow.py
app/agents/: base.py  explainer.py  finalizer.py  nl_to_sql.py  rewrite.py  risk_validator.py  schema_parser.py
app/api/: routes.py  server.py
app/prompts/: explainer.txt  nl_to_sql.txt  rewrite.txt  risk_validator.txt
docs/: SQLIQ_IMPLEMENTATION.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: ApprovalBox.tsx  Header.tsx  ResultBox.tsx  TracePanel.tsx
frontend/src/pages/: Home.tsx  Workflow.tsx
notebooks/: colab_ollama_backend.ipynb
sqliq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_agents.py  test_api.py  test_finalizer.py  test_risk_validator.py  test_schema_parser.py  test_workflow.py
