[project]
name = "sqliq"
version = "0.1.0"
description = "Bidirectional SQL intelligence powered by agentstatelib"
requires-python = ">=3.11"

dependencies = [
    "agentstate-lib[api,dashboard]>=0.5.1",
    "openai>=1.30",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]